--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "expo": "~48.0.11",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
-    "react-native": "0.71.6",
-    "styled-components": "^5.3.10"
+    "react-icons": "^4.8.0",
+    "react-native": "0.71.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
